    “never”, the latter being the default.
  * Add support for a new --build option to define build type by a
    comma-separated list of components (“source”, “any”, “all”, “binary” or
    “full”) in dpkg-genchanges and dpkg-buildpackage.
  * Add new -I option to dpkg-shlibdeps to ignore package build directories.
    Closes: #821025
  * Portability:
    - Move DPKG_ADMINDIR environment variable name out from update-alternatives
      code, to make life easier for non-dpkg-based systems.
    - Move alternatives temporary extension out from update-alternatives code,
      to make life easier for non-dpkg-based systems.
    - Switch start-stop-daemon on */kFreeBSD to use the low-level sysctl(3)
      interface instead of libkvm-dev.
  * Perl modules:
    - Add new CTRL_REPO_RELEASE control block type to Dpkg::Control.
    - Add new CTRL_COPYRIGHT_HEADER, CTRL_COPYRIGHT_FILES and
      CTRL_COPYRIGHT_LICENSE control block types to Dpkg::Control.
    - Make patching a file multiple times fatal for the first quilt patch in
      Dpkg::Source. Reported by Apollon Oikonomopoulos <apoikos@debian.org>.
      Closes: #810720
    - Only warn once when a diff patches a file multiple times in
      Dpkg::Source::Patch, and fix the warning message to make it clear that
      the diff might be patching the file more than once, not just twice.
    - Check existence of search criteria in Dpkg::Index when checking with a
      regex or a string match. Closes: #780906
      Base on a patch by Daniel Dehennin <daniel.dehennin@baby-gnu.org>.
    - Add new functions to validate and parse architecture names in Dpkg::Arch.
    - Make the dependency parser more strict in Dpkg::Deps. Closes: #784806
    - Add strong digest marking support to Dpkg::Checksums.
    - Error out on source packages without any strong digests in
      Dpkg::Source::Package, used by dpkg-source --extract, which can still
      be disabled with --no-check.