@@ -2,7 +2,7 @@
 .\"
 .\" Copyright © 1995-1996 Ian Jackson <ijackson@chiark.greenend.org.uk>
 .\" Copyright © 2000 Wichert Akkerman <wakkerma@debian.org>
-.\" Copyright © 2006-2015 Guillem Jover <guillem@debian.org>
+.\" Copyright © 2006-2016 Guillem Jover <guillem@debian.org>
 .\" Copyright © 2008-2010 Raphaël Hertzog <hertzog@debian.org>
 .\"
 .\" This is free software; you can redistribute it and/or modify
@@ -178,6 +178,10 @@ will produce informative messages on standard error, for example about
 how many of the package's source files are being uploaded.
 .B \-q
 suppresses these messages.
+.TP
+.BR \-O [\fIfilename\fP]
+Print the changes file to standard output (the default) or to \fIfilename\fP
+if specified (since dpkg 1.18.5).
 .TP
 .BR \-? ", " \-\-help
 Show the usage message and exit.
