@@ -79,6 +79,7 @@ dpkg (1.18.5) UNRELEASED; urgency=medium
     “full”) in dpkg-genchanges and dpkg-buildpackage.
   * Add new -I option to dpkg-shlibdeps to ignore package build directories.
     Closes: #821025
+  * Add new -O option to dpkg-genchanges.
   * Portability:
     - Move DPKG_ADMINDIR environment variable name out from update-alternatives
       code, to make life easier for non-dpkg-based systems.
